# ekklesia-bible-quiz

./: .env  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  app.py  bible_quiz.service  bible_quiz_db.sqlite  dump.sql  extract_questions.py  fabfile.py  gunicorn.conf.py  package-lock.json  pyproject.toml  questions  questions.txt  requirements.txt  setup_db.sql  tmp
api/v1/: app.py  config.py
api/v1/auth/: __init__.py  cookie_auth.py  pydict_session_auth.py  session_auth.py
api/v1/templates/: reset_user_password.html
api/v1/utils/: postdata.py
api/v1/views/: __init__.py  authentication.py  leaderboards.py  questions.py  users.py
api/v1/views/utils/: auth_wrapper.py
frontend/: fabfile.py  package-lock.json  package.json  setup_server.sh
frontend/src/: App.js  App.jsx  App.scss  index.js
frontend/src/api/: index.js
frontend/src/components/: BackgroundImage.css  BackgroundImage.jsx  LeaderBoards.jsx  QuizComponent.jsx  StartPage.jsx  styles.css
frontend/src/components/AnimatedLetter/: index.js  index.scss
frontend/src/components/Page Hero/: PageHero.js  PageHero.scss
frontend/src/components/Spinner/: index.jsx
frontend/src/components/Toast/: index.jsx  styles.css
frontend/src/pages/Home/: index.jsx
frontend/src/pages/Landing Page/: LandingPage.js  LandingPage.scss
frontend/src/styles/: global.css  root.css
models/: __init__.py  answer.py  base_model.py  enums.py  question.py  result.py  smtp_config.py
models/engine/: db_storage.py
models/mail/: __init__.py  utils.py
models/user/: __init__.py  auth.py
(+4 files in other folders)
